2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	windows.h -> windows.hh
	* windows.h: Rename as...
	* windows.hh: this.
	* README, libport.mk, lockable.hh, semaphore.hh, thread.hh: .
	* utime.hh: Adjust.

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't include system headers within the URBI namespace.
	* semaphore.hxx: Ahem...

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Make semaphores more robust.
	* semaphore.hh: Return int values for windows' sem_*.
	* semaphore.hxx: Check return values of sem_*. Use named semaphores
          only on Darwin (otherwise use unammed semaphores).

2006-12-08  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a dummy implementation of sem_open for Windows.
	* semaphore.hh: Don't check for LIBPORT_WIN32 since libport/windows.h
          properly defines WIN32 when LIBPORT_WIN32 is defined. Define
          SEM_FAILED to be a NULL pointer if doesn't exist. Add a dummy
          implementation of sem_open for WIN32 that returns SEM_FAILED. Clean
          up prototypes (use sem_t instead of HANDLE).
	* semaphore.hxx: Implement sem_open and clean up prototypes.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix includes.
	* semaphore.hh: sstream is required for all archs.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Portably check for SEM_FAILED.
	* libport.mk: Add semaphore.hxx.
	* semaphore.hh: Move inline code to...
	* semaphore.hxx: ...here. New. SEM_FAILED is defined differently on
          Linux and MacOSX: handle that difference.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Use LIBPORT_WIN32.
        Because we now AC_DEFINE WIN32 and it gets prefixed.
	* detect_win32.h,
	* lockable.hh,
	* network.h,
	* semaphore.hh,
	* thread.hh,
	* utime.hh,
	* windows.h: Here.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Properly detect G++.
	* hash.hh: Properly detect G++.
	* semaphore.hh,
	* utime.hh,
	* lockable.hh,